--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>Document</title>
+    <title>Supabase_clone</title>
 </head>
 <body class="bg-[#121212] text-white  ">
 
@@ -370,5 +370,6 @@ px-3 py-2">Request a demo</button>
 
 </body>
 </html>
+
 
 
